fix: fixed text alignment in forest type buttons

--- a/src/components/LocationResult.module.css
+++ b/src/components/LocationResult.module.css
@@ -17,3 +17,8 @@
 .listitem {
   display: flex !important;
 }
+
+.forestTypeButton {
+  text-align: left !important;
+  text-align-last: center;
+}
